--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.4",
     "expo-gl": "~15.0.3",
+    "expo-sensors": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.0",
     "react": "19.1.0",
